testsuite/tests/properties/invalid_node_builder/pos_arg.lkt
import common_empty

class Example: BaseExample {
    @lazy prop: EmptyNode = EmptyNode.builder(1).build()
}
